@@ -1,5 +1,9 @@
 2006-12-14  J. Tang  <jtang@tresys.com>
 
+	* Added apol_policy_path_t object.  This is needed because policy
+	paths are not just a single string, but rather a base policy and
+	any number of modules.
+
 	* New functions apol_config_join_var() generalized to be
 	apol_str_join().  Same with apol_config_split_var() ->
 	apol_str_split().
